--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -51,55 +51,55 @@ on:
         type: boolean
         default: false
 jobs:
-#  get_manager:
-#    uses: ./.github/workflows/get-manager.yml
-#    secrets: inherit
-#    with:
-#      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+  get_manager:
+    uses: ./.github/workflows/get-manager.yml
+    secrets: inherit
+    with:
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
 
-#  build-kernel-a12-5-10:
-#    uses: ./.github/workflows/kernel-a12-5.10.yml
-#    secrets: inherit
-#    with:
-#      make_release: true
-#      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-#      kernelsu_branch: ${{ inputs.kernelsu_branch }}
-#      version: ${{ inputs.version }}
-#      use_zram: ${{ inputs.use_zram }}
-#      use_kpm: ${{ inputs.use_kpm }}
+  build-kernel-a12-5-10:
+    uses: ./.github/workflows/kernel-a12-5.10.yml
+    secrets: inherit
+    with:
+      make_release: true
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      version: ${{ inputs.version }}
+      use_zram: ${{ inputs.use_zram }}
+      use_kpm: ${{ inputs.use_kpm }}
 
-#  build-kernel-a13-5-10:
-#    uses: ./.github/workflows/kernel-a13-5.10.yml
-#    secrets: inherit
-#    with:
-#      make_release: ${{ inputs.make_release }}
-#      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-#      kernelsu_branch: ${{ inputs.kernelsu_branch }}
-#      version: ${{ inputs.version }}
-#      use_zram: ${{ inputs.use_zram }}
-#      use_kpm: ${{ inputs.use_kpm }}
+  build-kernel-a13-5-10:
+    uses: ./.github/workflows/kernel-a13-5.10.yml
+    secrets: inherit
+    with:
+      make_release: ${{ inputs.make_release }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      version: ${{ inputs.version }}
+      use_zram: ${{ inputs.use_zram }}
+      use_kpm: ${{ inputs.use_kpm }}
 
-#  build-kernel-a13-5-15:
-#    uses: ./.github/workflows/kernel-a13-5.15.yml
-#    secrets: inherit
-#    with:
-#      make_release: ${{ inputs.make_release }}
-#      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-#      kernelsu_branch: ${{ inputs.kernelsu_branch }}
-#      version: ${{ inputs.version }}
-#      use_zram: ${{ inputs.use_zram }}
-#      use_kpm: ${{ inputs.use_kpm }}
+  build-kernel-a13-5-15:
+    uses: ./.github/workflows/kernel-a13-5.15.yml
+    secrets: inherit
+    with:
+      make_release: ${{ inputs.make_release }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      version: ${{ inputs.version }}
+      use_zram: ${{ inputs.use_zram }}
+      use_kpm: ${{ inputs.use_kpm }}
 
-#  build-kernel-a14-5-15:
-#    uses: ./.github/workflows/kernel-a14-5.15.yml
-#    secrets: inherit
-#    with:
-#      make_release: ${{ inputs.make_release }}
-#      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-#      kernelsu_branch: ${{ inputs.kernelsu_branch }}
-#      version: ${{ inputs.version }}
-#      use_zram: ${{ inputs.use_zram }}
-#      use_kpm: ${{ inputs.use_kpm }}
+  build-kernel-a14-5-15:
+    uses: ./.github/workflows/kernel-a14-5.15.yml
+    secrets: inherit
+    with:
+      make_release: ${{ inputs.make_release }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      version: ${{ inputs.version }}
+      use_zram: ${{ inputs.use_zram }}
+      use_kpm: ${{ inputs.use_kpm }}
 
   build-kernel-a14-6-1:
     uses: ./.github/workflows/kernel-a14-6.1.yml
@@ -112,16 +112,16 @@ jobs:
       use_zram: ${{ inputs.use_zram }}
       use_kpm: ${{ inputs.use_kpm }}
 
-#  build-kernel-a15-6-6:
-#    uses: ./.github/workflows/kernel-a15-6.6.yml
-#    secrets: inherit
-#    with:
-#      make_release: ${{ inputs.make_release }}
-#      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-#      kernelsu_branch: ${{ inputs.kernelsu_branch }}
-#      version: ${{ inputs.version }}
-#      use_zram: ${{ inputs.use_zram }}
-#      use_kpm: ${{ inputs.use_kpm }}
+  build-kernel-a15-6-6:
+    uses: ./.github/workflows/kernel-a15-6.6.yml
+    secrets: inherit
+    with:
+      make_release: ${{ inputs.make_release }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      version: ${{ inputs.version }}
+      use_zram: ${{ inputs.use_zram }}
+      use_kpm: ${{ inputs.use_kpm }}
 
   trigger-release:
     runs-on: ubuntu-latest
@@ -129,13 +129,13 @@ jobs:
       contents: write
       actions: write
     needs:
-        #- get_manager
-        #- build-kernel-a12-5-10
-        #- build-kernel-a13-5-10
-        #- build-kernel-a13-5-15
-        #- build-kernel-a14-5-15
+        - get_manager
+        - build-kernel-a12-5-10
+        - build-kernel-a13-5-10
+        - build-kernel-a13-5-15
+        - build-kernel-a14-5-15
         - build-kernel-a14-6-1
-        #- build-kernel-a15-6-6
+        - build-kernel-a15-6-6
     if: ${{ inputs.make_release }}
     env:
       REPO_OWNER: guruji-byte
