--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -58,82 +58,82 @@ on:
 jobs:
   get_manager:
     if: inputs.get_manager
-    uses: ./.github/workflows/get-manager.yml
+    uses: ./.github/workflows/get-manager.yml@main
     secrets: inherit
     with:
-      kernelsu_variant: inputs.kernelsu_variant
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
 
   build-kernel-a12-5-10:
     if: contains(format(',{0},', inputs.build_kernels), ',a12-5-10,')
-    uses: ./.github/workflows/kernel-a12-5.10.yml
+    uses: ./.github/workflows/kernel-a12-5.10.yml@main
     secrets: inherit
     with:
-      make_release: inputs.make_release
-      kernelsu_variant: inputs.kernelsu_variant
-      kernelsu_branch: inputs.kernelsu_branch
-      version: inputs.version
-      use_zram: inputs.use_zram
-      use_kpm: inputs.use_kpm
+      make_release: ${{ inputs.make_release }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      version: ${{ inputs.version }}
+      use_zram: ${{ inputs.use_zram }}
+      use_kpm: ${{ inputs.use_kpm }}
 
   build-kernel-a13-5-10:
     if: contains(format(',{0},', inputs.build_kernels), ',a13-5-10,')
-    uses: ./.github/workflows/kernel-a13-5.10.yml
+    uses: ./.github/workflows/kernel-a13-5.10.yml@main
     secrets: inherit
     with:
-      make_release: inputs.make_release
-      kernelsu_variant: inputs.kernelsu_variant
-      kernelsu_branch: inputs.kernelsu_branch
-      version: inputs.version
-      use_zram: inputs.use_zram
-      use_kpm: inputs.use_kpm
+      make_release: ${{ inputs.make_release }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      version: ${{ inputs.version }}
+      use_zram: ${{ inputs.use_zram }}
+      use_kpm: ${{ inputs.use_kpm }}
 
   build-kernel-a13-5-15:
     if: contains(format(',{0},', inputs.build_kernels), ',a13-5-15,')
-    uses: ./.github/workflows/kernel-a13-5.15.yml
+    uses: ./.github/workflows/kernel-a13-5.15.yml@main
     secrets: inherit
     with:
-      make_release: inputs.make_release
-      kernelsu_variant: inputs.kernelsu_variant
-      kernelsu_branch: inputs.kernelsu_branch
-      version: inputs.version
-      use_zram: inputs.use_zram
-      use_kpm: inputs.use_kpm
+      make_release: ${{ inputs.make_release }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      version: ${{ inputs.version }}
+      use_zram: ${{ inputs.use_zram }}
+      use_kpm: ${{ inputs.use_kpm }}
 
   build-kernel-a14-5-15:
     if: contains(format(',{0},', inputs.build_kernels), ',a14-5-15,')
-    uses: ./.github/workflows/kernel-a14-5.15.yml
+    uses: ./.github/workflows/kernel-a14-5.15.yml@main
     secrets: inherit
     with:
-      make_release: inputs.make_release
-      kernelsu_variant: inputs.kernelsu_variant
-      kernelsu_branch: inputs.kernelsu_branch
-      version: inputs.version
-      use_zram: inputs.use_zram
-      use_kpm: inputs.use_kpm
+      make_release: ${{ inputs.make_release }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      version: ${{ inputs.version }}
+      use_zram: ${{ inputs.use_zram }}
+      use_kpm: ${{ inputs.use_kpm }}
 
   build-kernel-a14-6-1:
     if: contains(format(',{0},', inputs.build_kernels), ',a14-6-1,')
-    uses: ./.github/workflows/kernel-a14-6.1.yml
+    uses: ./.github/workflows/kernel-a14-6.1.yml@main
     secrets: inherit
     with:
-      make_release: inputs.make_release
-      kernelsu_variant: inputs.kernelsu_variant
-      kernelsu_branch: inputs.kernelsu_branch
-      version: inputs.version
-      use_zram: inputs.use_zram
-      use_kpm: inputs.use_kpm
+      make_release: ${{ inputs.make_release }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      version: ${{ inputs.version }}
+      use_zram: ${{ inputs.use_zram }}
+      use_kpm: ${{ inputs.use_kpm }}
 
   build-kernel-a15-6-6:
     if: contains(format(',{0},', inputs.build_kernels), ',a15-6-6,')
-    uses: ./.github/workflows/kernel-a15-6.6.yml
+    uses: ./.github/workflows/kernel-a15-6.6.yml@main
     secrets: inherit
     with:
-      make_release: inputs.make_release
-      kernelsu_variant: inputs.kernelsu_variant
-      kernelsu_branch: inputs.kernelsu_branch
-      version: inputs.version
-      use_zram: inputs.use_zram
-      use_kpm: inputs.use_kpm
+      make_release: ${{ inputs.make_release }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      version: ${{ inputs.version }}
+      use_zram: ${{ inputs.use_zram }}
+      use_kpm: ${{ inputs.use_kpm }}
 
   trigger-release:
     runs-on: ubuntu-latest
